--- a/microservice-produits.properties
+++ b/microservice-produits.properties
@@ -5,8 +5,8 @@ server.port 9001
 spring.jpa.show-sql=true
 spring.h2.console.enabled=true
 
-#défini l'encodage pour data.sql
+#dÃ©fini l'encodage pour data.sql
 spring.datasource.sql-script-encoding=UTF-8
 
 #Mes Configurations
-dreamcs-configs.limitDeProduits = 2
+dreamcs-configs.limitDeProduits = 3
